# halo2-samples

./: Cargo.toml
crates/poseidon_ckb_verifier/: Cargo.toml
crates/poseidon_ckb_verifier/src/: main.rs
crates/poseidon_native/: Cargo.toml
crates/poseidon_native/src/: lib.rs
