[package]
name = "poseidon_ckb_verifier"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.10.0"
halo2_proofs = { git = 'https://github.com/contrun/halo2', branch = 'no_std_temp' }
halo2_gadgets = { git = 'https://github.com/contrun/halo2', branch = 'no_std_temp' }
